<resources>
    <string name="app_name">Drug</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Information</string>
    <string name="menu_slideshow">Quiz</string>
    <string name="menu_tools">Event</string>
    <string name="menu_share">Donation</string>
    <string name="menu_send">Contact Us</string>
    <string name="receiver">To:</string>
    <string name="message">Message</string>
    <string name="title_activity_maps">Map</string>

    //used in contact us
    <string name="contact_header">Contact Us</string>
    <string name="email">temp_email@gmail.com</string>
    <string name="phone1">011-321 5708</string>
    <string name="contact_number_header">Phone</string>
    <string name="website">www.xxxxx.com</string>
    <string name="website_header">Website</string>
    <string name="email_header">Email</string>

    //used in donate
    <string name="fund">Fund us</string>
    <string name="donate_venue">Donate a venue for helding event</string>

    //used in donate_fund
    <string name="other_amt"></string>
    <string name="missing_FirstName">Name</string>
    <string name="missing_LastName">Last Name</string>
    <string name="missingPhone">Phone</string>
    <string name="missingEmail">E-Mail</string>
    <string name="otheramt">Other Amount</string>
    <string name="specifyamt">Specify Amount</string>
    <string name="next">Next</string>
    <string name="send">Send</string>
    <string name="venue_size">Venue Size (sqft)</string>
    <string name="venue_location">Venue Location</string>
    <string name="contact_num">Contact Number</string>

    <string name="desc">Description</string>
    <string name="effect">Side Effect</string>
    <string name="text">textView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="reset">Reset Password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <!--    <string name="hello_blank_fragment">Empty</string>-->
    <string name="email2">Email</string>

    <string name="Mentee">Mentee</string>
    <string name="Mentor">Mentor</string>

    <string name="passEmail">Email</string>
    <string name="passDisplayName">DisplayName</string>
    <string name="passRole">Role</string>
    <string name="passAvailable">Available</string>
    <string name="passAddress">Address</string>
    <string name="passDate">Date</string>
    <string name="Creator">Event Organizer :</string>
    <string name="Location">Location :</string>
    <string name="City">City :</string>
    <string name="StartDate">Start Date :</string>
    <string name="EndDate">End Date :</string>
    <string name="StartTime">Start Time :</string>
    <string name="EndTime">End Time :</string>
    <string name="participate">Participate</string>

    <string name="evenName">Even Name</string>
    <string name="helpertextEvent">Please Enter Event Name</string>
    <string name="eventLocation">Event Location</string>
    <string name="helperLocation">Please Enter Event Location</string>
    <string name="eventDescription">Event Description</string>
    <string name="helperDescription">Please Enter Event Description</string>
    <string name="eventCity">Event City</string>
    <string name="helperCity">Please Enter Event City</string>
    <string name="date">Date</string>
    <string name="helperDate">Please Select Event Date</string>
    <string name="startTIme">Start TIme</string>
    <string name="endTime">End Time</string>
    <string name="helperStartTime">Please Select Start Time</string>
    <string name="helperEndTime">Please Select End Time</string>
    <string name="confirm">Confirm</string>
    <string name="resetEvent">Reset</string>



    <string name="quiz_title">Drug Quiz</string>
    <string name="quiz">Drug Quiz (%1$d/%2$d)</string>
    <string name="summary">There are several questions on this page to test your knowledge and understanding of drugs.
        The relevant answers can be found in the information office.</string>
    <string name="rules">Select the answer from the options given. Each time you get an answer correct,
    you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to
        the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="quiz_button">Get Start!</string>
    <string name="title_activity_quiz_main">activity_quiz_main</string>
    <string name="submit_button">Submit</string>
    <string name="try_again">Try Again</string>
    <string name="next_Match">Next Match</string>
    <string name="pass">Congratulations!</string>
    <string name="fail">Work Hard!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textView">TextView</string>
    <string name="something">something</string>


    <string name="quiz_title">Drug Quiz</string>
    <string name="quiz">Drug Quiz (%1$d/%2$d)</string>
    <string name="summary">There are several questions on this page to test your knowledge and understanding of drugs.
        The relevant answers can be found in the information office.</string>
    <string name="rules">Select the answer from the options given. Each time you get an answer correct,
    you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to
        the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="quiz_button">Get Start!</string>
    <string name="title_activity_quiz_main">activity_quiz_main</string>
    <string name="submit_button">Submit</string>
    <string name="try_again">Try Again</string>
    <string name="next_Match">Next Match</string>
    <string name="pass">Congratulations!</string>
    <string name="fail">Work Hard!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
