<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme2"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Information_Module.DrugInfo">

            <TextView
                android:id="@+id/textDisplayEventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="20dp"
                android:background="@drawable/layout_design"/>


            <View
                android:id="@+id/divider"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="2dp"
                android:background="@color/colorDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDisplayEventName" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawableRight="@drawable/ic_exclamation"
                android:padding="10dp"
                android:text="@string/desc"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.143"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/txtDrugInfo"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="@string/text"
                app:layout_constraintStart_toStartOf="@+id/textView1"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="22dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/txtDrugInfo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableRight="@drawable/ic_exclamation"
                android:padding="10dp"
                android:text="@string/Creator"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/txtDrugInfo"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <TextView
                android:id="@+id/txtDrugSideEffect"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="@string/text"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/txtDrugSideEffect" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableRight="@drawable/ic_exclamation"
                android:padding="10dp"
                android:text="@string/Location"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/txtDrugSideEffect"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <TextView
                android:id="@+id/textDisplayLocationDetail"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="@string/text"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/textDisplayLocationDetail" />

            <TextView
                android:id="@+id/txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableRight="@drawable/ic_exclamation"
                android:padding="10dp"
                android:text="@string/City"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/txtDrugSideEffect"
                app:layout_constraintTop_toBottomOf="@+id/divider4" />

            <TextView
                android:id="@+id/textDisplayCityDetail"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="@string/text"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/txtView" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDisplayCityDetail" />

            <TextView
                android:id="@+id/txtView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableRight="@drawable/ic_exclamation"
                android:padding="10dp"
                android:text="@string/StartDate"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/txtDrugSideEffect"
                app:layout_constraintTop_toBottomOf="@+id/divider5" />

            <TextView
                android:id="@+id/textDisplayDateDetail"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="@string/text"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/txtView1" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/textDisplayDateDetail" />

            <TextView
                android:id="@+id/txtView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableRight="@drawable/ic_exclamation"
                android:padding="10dp"
                android:text="@string/StartTime"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/txtDrugSideEffect"
                app:layout_constraintTop_toBottomOf="@+id/divider6" />

            <TextView
                android:id="@+id/textDisplayStartTimeDetail"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="@string/text"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/txtView2" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/textDisplayStartTimeDetail" />

            <TextView
                android:id="@+id/txtView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableRight="@drawable/ic_exclamation"
                android:padding="10dp"
                android:text="@string/EndTime"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="@+id/txtDrugSideEffect"
                app:layout_constraintTop_toBottomOf="@+id/divider7" />

            <TextView
                android:id="@+id/textDisplayEndTimeDetail"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="@string/text"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/txtView3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnparticipate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/participate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDisplayEndTimeDetail" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</layout>